<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/header"
            style="@style/margin_vertical_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back_button_24" />

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit_24" />
        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_detail_layout"
            style="@style/margin_vertical_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <io.getstream.avatarview.AvatarView
                android:id="@+id/profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/person_48"
                app:avatarViewBorderColor="@color/profile_green"
                app:avatarViewBorderWidth="3dp"
                app:avatarViewIndicatorBorderColor="@color/white"
                app:avatarViewIndicatorBorderSizeCriteria="10"
                app:avatarViewIndicatorColor="@color/profile_green"
                app:avatarViewIndicatorEnabled="true"
                app:avatarViewIndicatorPosition="bottomRight"
                app:avatarViewIndicatorSizeCriteria="9"
                app:avatarViewInitialsTextStyle="bold"
                app:avatarViewShape="circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profile_name_text"
                    style="@style/style_profile_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_text"
                    style="@style/style_profile_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online_status"
                    android:textColor="@color/profile_green"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/top_apps_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@color/light_red_high"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_detail_layout">

            <TextView
                android:id="@+id/top_apps_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/top_apps"
                android:textColor="@color/light_grey_medium"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/day_week_month_layout"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_apps_layout">


            <TextView
                android:id="@+id/day_chart"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                android:text="@string/day"
                android:textSize="18sp"
                android:paddingVertical="4dp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               android:layout_marginHorizontal="10dp"
                />

            <TextView
                android:id="@+id/week_chart"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:padding="4dp"
                android:text="@string/week"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/month_chart"
                app:layout_constraintStart_toEndOf="@id/day_chart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/month_chart"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:padding="4dp"
                android:text="@string/month"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/time_and_speed_usage_layout"
            style="@style/margin_vertical_horizontal"
            layout="@layout/time_and_speed_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day_week_month_layout" />


        <LinearLayout
            android:id="@+id/device_chart_layout"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_and_speed_usage_layout">


            <TextView
                android:id="@+id/hour_minute_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:rotation="270"
                android:text="@string/hh_mm"
                android:textSize="12sp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/device_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@color/light_red_high"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_chart_layout">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:text="@string/options"
                android:textColor="@color/light_grey_medium"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>